--- a/firstapp/src/app/products/product.component.html
+++ b/firstapp/src/app/products/product.component.html
@@ -10,28 +10,48 @@
                     FIlter By:
                 </div>
                 <div class="col-md-10">
-                    <input type="text"/>
+                    <input type="text" [(ngModel)]="filterData"/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Number of Product Search</h3>
+                    <h3>Number of Product Search {{filterData}}</h3>
                 </div>
             </div>
-            <div class="table-responsive">
+            
+            <div class="table-responsive" *ngIf="products && products.length" >
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Name</th>
+                            <th>
+                                <button type="button"
+                                    class="btn btn-success"
+                                    (click)="toggleImage()">
+                                    {{showImage? "Hide Image": "Show Image"}}
+                                </button>
+                            </th>
+                            <th style="color:blueviolet">Name</th>
                             <th>Code</th>
                             <th>Date</th>
+                            <th>Price</th>
+                            <th>StarRating</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let prod of products">
-                            <td>{{prod.productName}}</td>
-                            <td>{{prod.productCode}}</td>
+                        <tr *ngFor="let prod of products"
+                            >
+                            <td>
+                                <img [src]="prod.imageUrl" 
+                                    *ngIf="showImage"
+                                    [style.width.px]="imageWidth"/>
+                            </td>
+                            <td>{{prod.productName|uppercase}}</td>
+                            <td>{{prod.productCode|lowercase}}</td>
                             <td>{{prod.releaseDate}}</td>
+                            <td [ngStyle]="{'background-color':prod.price<20?'green':'red'}">
+                                {{prod.price|currency:'INR'}}
+                            </td>
+                            <td>{{prod.starRating}}</td>
                         </tr>
                     
                     </tbody>
