--- a/firstapp/src/app/shared/star.component.html
+++ b/firstapp/src/app/shared/star.component.html
@@ -1,4 +1,5 @@
-<div>
+<div [style.width.px]="starWidth" class="crop"
+    (click)="onStar()">
     <div style="width:86px">
         <span class="glyphicon glyphicon-star"></span>
         <span class="glyphicon glyphicon-star"></span>
@@ -7,3 +8,7 @@
         <span class="glyphicon glyphicon-star"></span>
     </div>
 </div>
+
+<!--
+    86/5*3.5
+-->
