--- a/firstapp/src/app/products/product.component.html
+++ b/firstapp/src/app/products/product.component.html
@@ -45,7 +45,11 @@
                                     *ngIf="showImage"
                                     [style.width.px]="imageWidth"/>
                             </td>
-                            <td>{{prod.productName | myUpper:'upper'}}</td>
+                            <td>
+                                <a [routerLink]="['/products', prod.productId]">
+                                    {{prod.productName | myUpper:'upper'}}
+                                </a>
+                            </td>
                             <td>{{prod.productCode| myUpper:'lower'}}</td>
                             <td>{{prod.releaseDate}}</td>
                             <td [ngStyle]="{'background-color':prod.price<20?'green':'red'}">
@@ -63,3 +67,7 @@
         </div>
     </div>
 </div>
+
+<!---
+[queryParams]="{name:prod.productName, desc:prod.description, image:prod.imageUrl}"
+-->
